# src/common/configs/swagger-output.json
@@ -103,29 +103,6 @@
       },
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "logoCategory": {
-                  "example": "any"
-                },
-                "descriptionCategory": {
-                  "example": "any"
-                },
-                "slugCategory": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
